# AEGISCORE

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  requirements.txt
backend/auth/: __init__.py  dependencies.py  jwt.py  rbac.py
backend/migrations/: env.py
backend/migrations/versions/: __init__.py
backend/models/: __init__.py  finding.py  fix.py  org.py  repo.py  risk.py  scan.py  user.py
backend/routers/: __init__.py  auth.py  correlations.py  findings.py  fixes.py  metrics.py  orgs.py  repos.py  risk.py  scans.py
backend/schemas/: __init__.py  auth.py  finding.py  fix.py  org.py  risk.py  scan.py
backend/services/: __init__.py  alerts.py  correlation.py
backend/services/ai/: __init__.py  feature_extractor.py  fix_generator.py  risk_model.py
backend/services/scanner/: __init__.py  bandit.py  semgrep.py  trivy.py
backend/workers/: __init__.py  celery_app.py
backend/workers/tasks/: __init__.py  ai_tasks.py  maintenance_tasks.py  scan_tasks.py
cli/: aegiscore_cli.py  pyproject.toml
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  client.js  correlations.js  findings.js  fixes.js  risk.js  scans.js
frontend/src/contexts/: AuthContext.jsx  OrgContext.jsx
frontend/src/hooks/: useAuth.js  useOrg.js  usePolling.js
frontend/src/pages/: CorrelationsPage.jsx  DashboardPage.jsx  FindingsPage.jsx  FixesPage.jsx  LoginPage.jsx  RepoPage.jsx  (+1 more)
infra/: prometheus.yml
(+19 files in other folders)
