[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegiscore-cli"
version = "1.0.0"
description = "AEGISCORE CLI — Self-Hosted AI Security Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
aegiscore = "aegiscore_cli:cli"
